fix footer fields spacing

--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -158,7 +158,7 @@
 
     .axis .tick text {
       font-family: "dinot-regular";
-      font-size: 12px;
+      font-size: 10px;
     }
 
     .num-cycle-text {
