--- a/frontend/stylesheets/directives/status-bar.scss
+++ b/frontend/stylesheets/directives/status-bar.scss
@@ -40,7 +40,7 @@
     padding: 10px 0;
 
     .machine-state, .time-remaining, .temp-info {
-      padding-left: 10px;
+      padding-left: 12px;
     }
 
     .holding {
@@ -67,6 +67,7 @@
       height: 15px;
       vertical-align: middle;
       margin-top: -3px;
+      margin-right: 7px;
     }
   }
 
